# vcard-generator

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  app.json  app.py  pyproject.toml  test_integration.py  test_integration.sh  test_vcard.py
.github/workflows/: integration-tests.yml  tests.yml
